dist/LineScript-win64-20260615/tests/cases/compile_fail/const_no_init.lsc
main() -> i64 do
  declare const x: i64
  return 0
end
